--- a/index.html
+++ b/index.html
@@ -1,100 +1,164 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Web Page 1</title>
-<style>
-    
-    .row {
-    width: auto;
-    height: 300px;
-    display: flex;
-    justify-content: center;
-    }
+    <style>
+      .row {
+        width: auto;
+        height: 300px;
+        display: flex;
+        justify-content: center;
+      }
 
-    .column {
-    width: 32%;
-    height: 100%;
-    float: left;
-    margin: 5px;
-    }
+      .column {
+        width: 32%;
+        height: 100%;
+        float: left;
+        margin: 5px;
+      }
 
-    table, th, td {
+      table,
+      th,
+      td {
         border: 1px solid black;
-    }
+      }
 
-    #abc {display: flex;
-    justify-content: center;
-    align-items: center;}
-</style>
+      #abc {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+    </style>
+  </head>
 
-</head>
-<body>
+  <body>
     <h1><u>BANGALORE</u></h1>
     <h3>IT Capital of India and a worldwide data innovation center</h3>
-    <p><span style="color: coral;">Bangalore</span>, officially Bengaluru, is the capital and largest city of the Indian state of Karnataka. It has a population of more than 8 million and a metropolitan population of around 11 million, making it the third most populous city and fifth most populous urban agglomeration in India, as well as the largest city in South India, and the 27th largest city in the world. Located on the Deccan Plateau, at a height of over 900 m (3,000 ft) above sea level, Bangalore has a pleasant climate throughout the year, with its parks and green spaces earning it the reputation as the "Garden City" of India. Its elevation is the highest among the major cities of India.<br>
+    <p>
+      <span style="color: coral">Bangalore</span>, officially Bengaluru, is the
+      capital and largest city of the Indian state of Karnataka. It has a
+      population of more than 8 million and a metropolitan population of around
+      11 million, making it the third most populous city and fifth most populous
+      urban agglomeration in India, as well as the largest city in South India,
+      and the 27th largest city in the world. Located on the Deccan Plateau, at
+      a height of over 900 m (3,000 ft) above sea level, Bangalore has a
+      pleasant climate throughout the year, with its parks and green spaces
+      earning it the reputation as the "Garden City" of India. Its elevation is
+      the highest among the major cities of India.<br />
 
-The city's history dates back to around 890 CE, as found in a stone inscription found at the Nageshwara Temple in Begur, Bangalore. In 1537 CE, Kempé Gowdā – a feudal ruler under the Vijayanagara Empire – established a mud fort, considered the foundation of modern Bangalore and its oldest areas, or petes, which still exist. After the fall of the Vijayanagar empire, Kempe Gowda declared independence; in 1638, a large Adil Shahi Bijapur army defeated Kempe Gowda III, and Bangalore was came under Shahaji Bhonsle as a jagir Which later became his capital .The Mughals later captured Bangalore and sold it to Chikkadevaraja Wodeyar (1673–1704), the then ruler of the Kingdom of Mysore.[16] When Haider Ali seized control of the Kingdom of Mysore, the administration of Bangalore passed into his hands.</p>
+      The city's history dates back to around 890 CE, as found in a stone
+      inscription found at the Nageshwara Temple in Begur, Bangalore. In 1537
+      CE, Kempé Gowdā – a feudal ruler under the Vijayanagara Empire –
+      established a mud fort, considered the foundation of modern Bangalore and
+      its oldest areas, or petes, which still exist. After the fall of the
+      Vijayanagar empire, Kempe Gowda declared independence; in 1638, a large
+      Adil Shahi Bijapur army defeated Kempe Gowda III, and Bangalore was came
+      under Shahaji Bhonsle as a jagir Which later became his capital .The
+      Mughals later captured Bangalore and sold it to Chikkadevaraja Wodeyar
+      (1673–1704), the then ruler of the Kingdom of Mysore.[16] When Haider Ali
+      seized control of the Kingdom of Mysore, the administration of Bangalore
+      passed into his hands.
+    </p>
 
-<h2>History:</h2>
-<p>A discovery of Stone Age artefacts during the 2001 Census of India at Jalahalli, Sidhapura and Jadigenahalli, all of which are located on Bangalore's outskirts today, suggest human settlement around 4000 BCE.Around 1,000 BCE (during the Iron Age), burial grounds were established at Koramangala and Chikkajala on the outskirts of Bangalore. Coins of the Roman emperors Augustus, Tiberius, and Claudius found at Yeswanthpur and HAL Airport indicate that the region was involved in trans-oceanic trade with the Romans and other civilisations in 27 BCE.<br>
+    <h2>History:</h2>
+    <p>
+      A discovery of Stone Age artefacts during the 2001 Census of India at
+      Jalahalli, Sidhapura and Jadigenahalli, all of which are located on
+      Bangalore's outskirts today, suggest human settlement around 4000
+      BCE.Around 1,000 BCE (during the Iron Age), burial grounds were
+      established at Koramangala and Chikkajala on the outskirts of Bangalore.
+      Coins of the Roman emperors Augustus, Tiberius, and Claudius found at
+      Yeswanthpur and HAL Airport indicate that the region was involved in
+      trans-oceanic trade with the Romans and other civilisations in 27 BCE.<br />
 
-    The region of modern-day Bangalore was part of several successive South Indian kingdoms. Between the fourth and tenth centuries, the region was ruled by the Western Ganga dynasty of Karnataka,</p>
+      The region of modern-day Bangalore was part of several successive South
+      Indian kingdoms. Between the fourth and tenth centuries, the region was
+      ruled by the Western Ganga dynasty of Karnataka,
+    </p>
 
-<h2>Some Beautiful Places in Bangalore:</h2>
+    <h2>Some Beautiful Places in Bangalore:</h2>
 
-<div class="row">
-    <div class="column">
-        <img src="Cubbon Park.jpg" alt="image01" width="100%" height="85%">
+    <div class="row">
+      <div class="column">
+        <img src="Cubbon Park.jpg" alt="image01" width="100%" height="85%" />
         <p>CUBBON PARK</p>
-    </div>
-    <div class="column">
-        <img src="Lalbagh Botanical Garden.jpg" alt="image02" width="100%" height="85%">
+      </div>
+      <div class="column">
+        <img
+          src="Lalbagh Botanical Garden.jpg"
+          alt="image02"
+          width="100%"
+          height="85%"
+        />
         <p>LALBAGH BOTANICAL GARDEN</p>
-    </div>
-    <div class="column">
-        <img src="Begaluru Palace.jpg" alt="image03" width="100%" height="85%">
+      </div>
+      <div class="column">
+        <img
+          src="Begaluru Palace.jpg"
+          alt="image03"
+          width="100%"
+          height="85%"
+        />
         <p>BENGALURU PALACE</p>
+      </div>
     </div>
-</div><br>
-<h2>Attractions in Bangalore:</h2>
-<div id="abc">
-    <table style="width: 90%;">
+    <br />
+    <h2>Attractions in Bangalore:</h2>
+    <div id="abc">
+      <table style="width: 90%">
         <th>Attraction</th>
         <th>Description</th>
         <tr>
-            <td>IT Hub City</td>
-            <td>India's major information technology hubs is Bangalore</td>
+          <td>IT Hub City</td>
+          <td>India's major information technology hubs is Bangalore</td>
         </tr>
         <tr>
-            <td>Bannerghatta National Park</td>
-            <td>Bannerghatta is the first biological park in India to have a fenced forested elephant sanctuary.</td>
+          <td>Bannerghatta National Park</td>
+          <td>
+            Bannerghatta is the first biological park in India to have a fenced
+            forested elephant sanctuary.
+          </td>
         </tr>
         <tr>
-            <td>Commercial Street</td>
-            <td>This has been the city's most famous shopping street for decades.</td>
+          <td>Commercial Street</td>
+          <td>
+            This has been the city's most famous shopping street for decades.
+          </td>
         </tr>
         <tr>
-            <td>Visvesvaraya Industrial and Technological Museum</td>
-            <td>The museum stores and displays industrial development from early 1960's in an interesting chronological order.</td>
+          <td>Visvesvaraya Industrial and Technological Museum</td>
+          <td>
+            The museum stores and displays industrial development from early
+            1960's in an interesting chronological order.
+          </td>
         </tr>
         <tr>
-            <td>UB City</td>
-            <td>This building originally the headquarters of now grounded Kingfisher Airlines is a modern day star attraction.</td>
+          <td>UB City</td>
+          <td>
+            This building originally the headquarters of now grounded Kingfisher
+            Airlines is a modern day star attraction.
+          </td>
         </tr>
         <tr>
-            <td>Wonderla Amusement Park</td>
-            <td>Wonder la has 5 water treatment plants to recycle, process and filter all types of water.</td>
+          <td>Wonderla Amusement Park</td>
+          <td>
+            Wonder la has 5 water treatment plants to recycle, process and
+            filter all types of water.
+          </td>
         </tr>
+      </table>
+    </div>
+    <br /><br />
 
-    </table>
-</div><br><br>
+    <p>If you want to know more about Bangalore:</p>
+    <a
+      href="https://en.wikipedia.org/wiki/Bangalore"
+      target="blank"
+      style="text-decoration: none"
+      >Click here</a
+    >
+    <br /><br /><br />
 
-<p>If you want to know more about Bangalore:</p>
-<a href="https://en.wikipedia.org/wiki/Bangalore" target="blank" style="text-decoration: none;">Click here</a>
-<br><br><br>
-
-<p>Made with Love by <span style="color: cadetblue;">Huzaifa Ali</span></p>
-
-</body>
-
+    <p>Made with Love by <span style="color: cadetblue">Huzaifa Ali</span></p>
+  </body>
 </html>
